<resources>
    <string name="app_name">MyFlexibleFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello ini home fragment</string>
    <string name="to_category">Ke Fragment Category</string>
    <string name="this_category">Ini adalah fragment category</string>
    <string name="category_lifestyle">Ke fragment lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="question">Kartun yang paling kamu suka</string>
    <string name="doraemon">Doraemon</string>
    <string name="dora">Dora</string>
    <string name="upin_ipin">Upin Ipin</string>
    <string name="Boboiboy">Boboiboy</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
</resources>
